reworked frontenf on TS

--- a/HTML/admin_page.html
+++ b/HTML/admin_page.html
@@ -15,9 +15,10 @@
     <link rel="stylesheet" href="/public/style/book/style.css" />
     <link rel="stylesheet" href="/public/style/admin/admin_style.css" />
 
-    <script src="/public/scripts/admin/main-admin.js" defer></script>
-    <script src="/public/scripts/admin/add-book.js " defer></script>
-    <script src="/public/scripts/admin/delete-book.js" defer></script>
+    <script src="/public/scripts/admin/init.js" type="module"></script>
+    <script src="/public/scripts/admin/main-admin.js" type="module" defer></script>
+    <script src="/public/scripts/admin/add-book.js " type="module" defer></script>
+    <script src="/public/scripts/admin/delete-book.js" type="module" defer></script>
   </head>
   <body>
     <header class="p-3 bg-dark text-white">
